changed styles and removed unused paramteres

--- a/src/main.css
+++ b/src/main.css
@@ -9,7 +9,7 @@
 
 #projects-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
