--- a/src/main.css
+++ b/src/main.css
@@ -18,12 +18,74 @@
   margin: 10px;
   background-color: rgb(157, 157, 226);
   display: block;
+
+  position: relative;
+}
+
+.project-item h2 {
+  margin: 0;
+}
+
+.project-item h4 {
+  margin: 5px 0;
+}
+
+.project-item-delete {
+  float: right;
+  border: 0;
+  background-color: red;
+  color: white;
+  font-weight: bold;
+}
+
+.project-item-edit {
+  border: 0;
+  background-color: #3165eb;
+  color: white;
+  font-weight: bold;
 }
 
 #add-project-btn {
+  background-color: #3165eb;
+  border: 0;
+  height: 40px;
+  width: 150px;
+  color: #ffff;
+  font-weight: bold;
+}
+
+.form-component {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-component > * {
+  margin-top: 20px;
+}
+
+.form-component > button {
+  background-color: #3165eb;
+  border: 0;
+  height: 20px;
+  width: 150px;
+  color: #ffff;
+  font-weight: bold;
 }
 
 #add-form-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: none;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+#edit-form-modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -41,7 +103,7 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
+  max-width: 400px;
   width: 100%;
   position: relative;
 }
