--- a/src/views/projectView.css
+++ b/src/views/projectView.css
@@ -2,6 +2,21 @@
   margin-bottom: 20px;
 }
 
+#stories-container {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+#stories-container-todo,
+#stories-container-doing,
+#stories-container-done {
+  background-color: #bbbcbe;
+  display: flex;
+  width: 30%;
+  flex-direction: column;
+}
+
 #add-story-btn {
   background-color: #3165eb;
   border: 0;
@@ -101,4 +116,49 @@ button:hover {
 .back-button:hover {
   background-color: #0056b3;
   cursor: pointer;
+}
+
+.story-item {
+  padding: 10px;
+  margin: 10px;
+  background-color: rgb(157, 157, 226);
+  display: block;
+
+  position: relative;
+}
+
+.story-item-title {
+  margin-top: 0;
+  cursor: pointer;
+}
+
+.story-item-description {
+  margin: 5px 0;
+}
+
+.story-item-delete {
+  float: right;
+  border: 0;
+  background-color: red;
+  color: white;
+  font-weight: bold;
+}
+.story-item-edit {
+  border: 0;
+  background-color: #3165eb;
+  color: white;
+  font-weight: bold;
+}
+
+#edit-form-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: none;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
 }
