working on task page and todo fix errors

--- a/src/views/storyView.html
+++ b/src/views/storyView.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="projectView.css" />
+    <link rel="stylesheet" href="storyView.css" />
     <title>Project Page</title>
   </head>
   <body>
     <div id="project-page"></div>
-    <script type="module" src="/src/views/projectView.ts"></script>
+    <script type="module" src="/src/views/storyView.ts"></script>
   </body>
 </html>
