added login page

--- a/src/views/loginView.html
+++ b/src/views/loginView.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="storyView.css" />
-    <title>Story Page</title>
+    <link rel="stylesheet" href="loginView.css" />
+    <title>Login Page</title>
   </head>
   <body>
-    <div id="project-page"></div>
-    <script type="module" src="/src/views/storyView.ts"></script>
+    <div id="login-page"></div>
+    <script type="module" src="/src/views/loginView.ts"></script>
   </body>
 </html>
