--- a/src/views/taskView.html
+++ b/src/views/taskView.html
@@ -7,7 +7,7 @@
     <title>Story Page</title>
   </head>
   <body>
-    <div id="story-page"></div>
+    <div id="task-page"></div>
     <script type="module" src="/src/views/taskView.ts"></script>
   </body>
 </html>
