--- a/src/views/main.css
+++ b/src/views/main.css
@@ -77,6 +77,8 @@ body {
 .project-item {
   padding: 15px;
   margin: 10px;
+  width: 150px;
+  height: 170px;
   background-color: #f0f0f0;
   display: block;
   border-radius: 8px;
@@ -124,6 +126,8 @@ body {
   color: white;
   border: 0;
   padding: 5px 10px;
+  position: absolute;
+  bottom: 10px;
   font-weight: bold;
   border-radius: 5px;
   cursor: pointer;
@@ -154,10 +158,31 @@ button:hover {
 .form-component > button {
   background-color: #3165eb;
   border: 0;
-  height: 20px;
-  width: 150px;
-  color: #ffff;
+  height: 30px;
+  width: 100%;
+  color: #fff;
   font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 0 15px;
+  margin-right: 10px;
+}
+
+.form-component > input {
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 15px;
+  transition: border-color 0.3s ease;
+}
+
+.form-component > input:focus {
+  outline: none;
+  border-color: #3165eb;
+  box-shadow: 0 0 5px rgba(49, 101, 235, 0.5);
 }
 
 #add-form-modal {
