--- a/src/views/registerView.css
+++ b/src/views/registerView.css
@@ -1,3 +1,37 @@
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f0f0f0;
+}
+
+.container {
+  position: relative;
+}
+
+.back-button {
+  position: absolute;
+  top: 0px; /* Adjust as needed */
+  left: 0;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.back-button:hover {
+  background-color: #0056b3;
+}
+
 .login-form {
   background: white;
   padding: 20px;
@@ -8,10 +42,20 @@
   width: 300px;
 }
 
-.login-form input {
+.login-form input,
+.login-form select {
   margin-bottom: 10px;
   padding: 10px;
   font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+.login-form input:focus,
+.login-form select:focus {
+  border-color: #3165eb;
 }
 
 .login-form button {
@@ -26,19 +70,4 @@
 
 .login-form button:hover {
   background-color: #274bb1;
-}
-
-.back-button {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 4px;
-  transition: background-color 0.3s;
 }
