--- a/src/views/storyView.css
+++ b/src/views/storyView.css
@@ -2,10 +2,10 @@
 
 /* Global styles */
 body {
-  font-family: 'Roboto', sans-serif; /* Apply Roboto font to the entire body */
-  background-color: #f0f0f0; /* Light gray background */
-  margin: 0; /* Remove default body margin */
-  padding: 0; /* Remove default body padding */
+  font-family: 'Roboto', sans-serif;
+  background-color: #f0f0f0;
+  margin: 0;
+  padding: 0;
 }
 
 #header-container {
@@ -71,10 +71,21 @@ body {
   cursor: pointer;
 }
 
-.story-item-description {
+.story-item-description,
+.story-item-priority,
+.story-item-assigned-user {
   font-size: 14px;
   color: #666;
   margin-bottom: 10px;
+}
+
+.story-item-priority {
+  color: #333;
+  font-weight: bold;
+}
+
+.story-item-assigned-user {
+  color: #333;
 }
 
 .story-item-delete {
@@ -201,6 +212,16 @@ button:hover {
   transition: border-color 0.3s ease;
 }
 
+.form-component > select {
+  margin-bottom: 10px;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
 .form-component > input:focus {
   outline: none;
   border-color: #3165eb;
@@ -214,9 +235,9 @@ button:hover {
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
-  display: block;
   font-size: 16px;
   margin: 4px 2px;
+  display: block;
   cursor: pointer;
   border-radius: 4px;
   transition: background-color 0.3s;
@@ -224,5 +245,4 @@ button:hover {
 
 .back-button:hover {
   background-color: #0056b3;
-  cursor: pointer;
 }
