--- a/src/views/main.css
+++ b/src/views/main.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-/* Global styles */
 body {
-  font-family: 'Roboto', sans-serif; /* Apply Roboto font to the entire body */
-  background-color: #f0f0f0; /* Light gray background */
-  margin: 0; /* Remove default body margin */
-  padding: 0; /* Remove default body padding */
+  font-family: 'Roboto', sans-serif;
+  background-color: #f0f0f0;
+  margin: 0;
+  padding: 0;
 }
 
 #header-container {
