--- a/src/views/loginView.css
+++ b/src/views/loginView.css
@@ -5,6 +5,11 @@ body {
   height: 100vh;
   margin: 0;
   background-color: #f0f0f0;
+  transition: background-color 0.3s;
+}
+
+body.dark-mode {
+  background-color: #181818;
 }
 
 .container {
@@ -19,6 +24,12 @@ body {
   display: flex;
   flex-direction: column;
   width: 300px;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+body.dark-mode .login-form {
+  background: #333;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
 }
 
 .login-form input {
@@ -28,7 +39,13 @@ body {
   border: 1px solid #ccc;
   border-radius: 4px;
   outline: none;
-  transition: border-color 0.3s;
+  transition: border-color 0.3s, background-color 0.3s;
+}
+
+body.dark-mode .login-form input {
+  background-color: #555;
+  border-color: #888;
+  color: #fff;
 }
 
 .login-form button {
@@ -39,15 +56,24 @@ body {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .login-form button:hover {
   background-color: #274bb1;
 }
 
+body.dark-mode .login-form button {
+  background-color: #4a90e2;
+}
+
+body.dark-mode .login-form button:hover {
+  background-color: #3a70b1;
+}
+
 .back-button {
   position: absolute;
-  top: 0px; /* Adjust as needed */
+  top: 0px;
   left: 0;
   background-color: #007bff;
   color: white;
@@ -64,4 +90,67 @@ body {
 
 .back-button:hover {
   background-color: #0056b3;
+}
+
+body.dark-mode .back-button {
+  background-color: #0056b3;
+}
+
+body.dark-mode .back-button:hover {
+  background-color: #003f8c;
+}
+
+.switch {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
