--- a/src/views/taskView.css
+++ b/src/views/taskView.css
@@ -7,12 +7,22 @@ body {
   padding: 0;
 }
 
+body.dark-mode {
+  background-color: #181818;
+  color: #ffffff;
+}
+
 #header-container {
   margin-bottom: 20px;
   padding: 10px;
   text-align: center;
   background-color: #ffffff;
   border-bottom: 1px solid #ccc;
+}
+
+body.dark-mode #header-container {
+  background-color: #333333;
+  border-bottom: 1px solid #555555;
 }
 
 #tasks-container {
@@ -23,6 +33,11 @@ body {
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+body.dark-mode #tasks-container {
+  background-color: #282828;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 #tasks-container-todo,
@@ -37,9 +52,17 @@ body {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
+body.dark-mode #tasks-container-todo,
+body.dark-mode #tasks-container-doing,
+body.dark-mode #tasks-container-done {
+  background-color: #333333;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+}
+
 #add-task-btn {
   width: 130px;
   margin-left: 20px;
+  margin-bottom: 10px;
   float: left;
   background-color: #3165eb;
   border: 0;
@@ -58,8 +81,7 @@ body {
 }
 
 #project-name-label {
-  float: right;
-  display: inline;
+  display: inline-block;
   font-weight: bold;
   font-size: 30px;
   color: #3165eb;
@@ -104,6 +126,20 @@ button:hover {
 
 .modal-overlay.show {
   display: flex;
+}
+
+body.dark-mode .modal-content {
+  background-color: #333333;
+  color: #ffffff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+body.dark-mode .modal-close-button {
+  color: #ffffff;
+}
+
+body.dark-mode .modal-overlay.show {
+  background: rgba(0, 0, 0, 0.8);
 }
 
 .form-component {
@@ -155,6 +191,18 @@ button:hover {
   box-shadow: 0 0 5px rgba(49, 101, 235, 0.5);
 }
 
+body.dark-mode .form-component > input,
+body.dark-mode .form-component > select {
+  background-color: #333333;
+  color: #ffffff;
+  border-color: #555555;
+}
+
+body.dark-mode .form-component > input:focus,
+body.dark-mode .form-component > select:focus {
+  border-color: #4a90e2;
+}
+
 .back-button {
   background-color: #007bff;
   color: white;
@@ -172,6 +220,14 @@ button:hover {
 
 .back-button:hover {
   background-color: #0056b3;
+}
+
+body.dark-mode .back-button {
+  background-color: #0056b3;
+}
+
+body.dark-mode .back-button:hover {
+  background-color: #003f8c;
 }
 
 .task-item {
@@ -258,6 +314,23 @@ button:hover {
   cursor: pointer;
 }
 
+body.dark-mode .task-item {
+  background-color: #333333;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+  color: #ffffff;
+}
+
+body.dark-mode .task-item:hover {
+  background-color: #555555;
+}
+
+body.dark-mode .task-item-description,
+body.dark-mode .task-item-priority,
+body.dark-mode .task-item-assigned-user,
+body.dark-mode .task-item-hours {
+  color: #ffff;
+}
+
 #edit-task-modal {
   position: fixed;
   top: 0;
@@ -269,4 +342,59 @@ button:hover {
   justify-content: center;
   align-items: center;
   z-index: 1000;
+}
+
+.switch {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
